cmake_minimum_required(VERSION 3.23)
project(leetcodeTraining)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetcodeTraining
        src/com/train/algorithm/list/implementInC++/AddTwoNumbers.cpp
        src/com/train/algorithm/list/implementInC++/AddTwoNumbers2.cpp
        src/com/train/algorithm/list/implementInC++/InsertionSortList.cpp
        src/com/train/algorithm/list/implementInC++/LInkedListCycle.cpp
        src/com/train/algorithm/list/implementInC++/LinkedListCycle2.cpp
        src/com/train/algorithm/list/implementInC++/MergedKSortedLists.cpp
        src/com/train/algorithm/list/implementInC++/MergeTwoSortedLists.cpp
        src/com/train/algorithm/list/implementInC++/ReverseLinkedList.cpp
        src/com/train/algorithm/list/implementInC++/SwapNodesInPairs.cpp src/com/train/algorithm/search/implementInC++/WordLadderII.cpp src/com/train/algorithm/search/implementInC++/OpentheLock.cpp src/com/train/algorithm/search/implementInC++/RaceCar.cpp src/com/train/algorithm/search/implementInC++/01Matrix.cpp src/com/train/algorithm/search/implementInC++/CutOffTreesforGolfEvent.cpp)
